--- a/src/VisualizadorDeSinais/VisualizadorDeSinais.csproj
+++ b/src/VisualizadorDeSinais/VisualizadorDeSinais.csproj
@@ -18,6 +18,7 @@
 
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="$(AvaloniaVersion)" />
+    <PackageReference Include="LiveChartsCore.SkiaSharpView.Avalonia" Version="2.0.0-rc2" />
   </ItemGroup>
 
   <ItemGroup>
